# synapse-agent

./: .env.example  .gitignore  Dockerfile  FEATURE-PLAN.MD  FEATURES.md  PLAN.md  README.md  config.py  docker-compose.yml  features.md  main.py  mcp_servers.json  pyproject.toml  test_mcp_github.py  test_skills.py
.playwright-mcp/: page-2026-06-09T11-56-43-191Z.yml  page-2026-06-09T12-11-18-914Z.yml  page-2026-06-09T12-11-38-413Z.yml  page-2026-06-09T12-11-41-180Z.yml  page-2026-06-10T11-25-16-487Z.yml  page-2026-06-10T11-25-23-532Z.yml  page-2026-06-10T11-25-35-492Z.yml  page-2026-06-10T11-31-22-759Z.yml  page-2026-06-10T11-31-34-275Z.yml  page-2026-06-10T11-35-24-486Z.yml  page-2026-06-10T11-38-06-791Z.yml  page-2026-06-10T11-38-14-801Z.yml  page-2026-06-10T11-38-24-403Z.yml  page-2026-06-10T11-39-23-494Z.yml  page-2026-06-10T11-39-43-376Z.yml  page-2026-06-10T11-39-55-462Z.yml  page-2026-06-10T11-41-08-082Z.yml  page-2026-06-10T11-41-15-078Z.yml  page-2026-06-10T11-41-59-610Z.yml  page-2026-06-10T17-03-35-570Z.yml  page-2026-06-10T17-03-45-756Z.yml  page-2026-06-10T17-03-58-852Z.yml  page-2026-06-10T17-06-31-960Z.yml  page-2026-06-10T17-09-47-786Z.yml  page-2026-06-10T17-09-58-941Z.yml  page-2026-06-10T17-10-08-955Z.yml
agent/: __init__.py  context.py  loop.py  mcp_client.py  memory.py  persistent_memory.py  runner.py  session.py  skills.py  subagent.py  thinking.py
cron/: jobs.example.json  scheduler.py
docs/: docker.md
gateway/: telegram.py
models/: anthropic.py  base.py  ollama.py  openai.py
test_files/: budget.xlsx  letter.docx  notes.txt  people.csv  (+1 more)
(+57 files in other folders)
