[project]
name = "claudecode-agent"
version = "0.2.0"
description = "A multi-provider AI coding agent with pluggable tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.4.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
    "requests>=2.34.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "termcolor>=2.4.0",
    "pydantic>=2.0.0",
    "pdfplumber>=0.11.0",
    "reportlab>=4.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pytesseract>=0.3.10",
    "pillow>=10.0.0",
    "numpy>=2.2.6",
    "mcp>=1.27.2",
    "aiogram>=3.0.0",
    "edge-tts>=6.1.0",
    "pydub>=0.25.0",
    "croniter>=1.4.0",
    "textual>=0.80.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
